--- a/Object_Detection.ipynb
+++ b/Object_Detection.ipynb
@@ -397,7 +397,7 @@
     }
    ],
    "source": [
-    "cap = cv2.VideoCapture('WhatsApp Video 2024-10-17 at 10.24.34 AM.mp4')\n",
+    "cap = cv2.VideoCapture('Path to your Video file')\n",
     "\n",
     "\n",
     "if not cap.isOpened():\n",
